# NPCJason

./: .gitignore  LICENSE  README.md  build.bat  build_installer.bat  generate_icon.py  installer.iss  npcjason.py  npcjason.spec  pyproject.toml  release-notes-v1.5.0.md  release-notes-v1.6.0.md  release-notes-v1.7.0.md  release-notes-v1.8.0.md  release-notes-v1.8.1.md  release-sha256.txt  requirements.txt  run_npcjason.bat  sayings.txt.example  version_info.txt
dialogue-packs/: README.md  app-title-humor.json  cisco-jokes.json  jason-quotes.json  networking-meltdown-helpdesk-chaos.json  seasonal-specials.json  veeam-jason.txt  what-do.json
npcjason_app/: __init__.py  animation.py  app.py  app_controller.py  companion_presence.py  companions.py  coordination.py  desk_items.py  diagnostics.py  dialogue.py  movement.py  notifications.py  paths.py  persistence.py  personality.py  pet_window.py  rare_events.py  runtime_state.py  scenarios.py  scheduler.py  seasonal.py  settings_service.py  settings_window.py  skins.py  sound.py  speech_history.py  startup.py  store.py  title_humor.py  toy_window.py  toys.py  tray_controller.py  ui.py  unlocks.py  updates.py  version.py  windows_events.py  windows_platform.py
skins/: README.md  astronaut-jason.json  classic-jason.json  homelab-jason.json  knight-jason.json  network-jason.json  office-jason.json  responsible-jason.json  squarl-suit-jason.json  veeam-jason.json  wizard-jason.json
tests/: helpers.py  test_animation.py  test_app_helpers.py  test_companion_presence.py  test_companions.py  test_coordination.py  test_dialogue.py  (+23 more)
(+3 files in other folders)
